src/Drilldown.module.css
.outer {
  --neon: var(--neon-hex);
  height: 100vh;
  height: -webkit-fill-available;
  display: flex;
  flex-direction: column;
  padding: 2vw;
  gap: 1vw;
}

@supports (color: color(rec2020 0 0 0)) {
  .outer {
    --neon: var(--neon-hdr);
  }
}

.drilldown {
  font-family: "Plex Sans", "Noto Emoji Provider", monospace;
  flex: 1;
}

.container {
  width: 100%;
  max-width: 100vw;
  height: 100%;
  overflow: hidden;
  display: flex;
  flex-direction: row;
  gap: 1vw;
}

.left,
.right {
  display: flex;
  flex-direction: column;
  gap: 1vw;
}

.left {
  width: var(--left-width);
}

.right {
  width: calc(95vw - var(--left-width));

  font-family: "Plex Mono", monospace;
  font-size: 13px;
  line-height: 1.425;
}

.bar {
  height: 32px;
  line-height: 32px;
  flex: none;
  padding-left: 0.5rem;

  color: #000;
  background-color: var(--neon);

  display: flex;
  overflow: hidden;
}

.left .bar {
  font-size: 14px;
  gap: 1.5ch;
}

.right .bar span {
  font-weight: 550;
  user-select: text;
}

.grow {
  flex: 1;
}

.action {
  display: block;
  padding: 0 1em;
  cursor: pointer;
}

.action:last-of-type {
  margin-right: 0.5em;
}

.action:hover {
  color: var(--neon);
  background-color: #000;
}

.box {
  flex-grow: 1;
  border: 1px solid var(--neon);
  padding: 0.25rem;
}

/* chrome's scroll bars don't show up well on dark backgrounds;
   use primary color for the left scrollbar and hide the right
  scroll bars to work around */
.left ::-webkit-scrollbar {
  -webkit-appearance: none;
  width: 5px;
}

.left ::-webkit-scrollbar-corner {
  background: rgba(0, 0, 0, 0);
}

.left ::-webkit-scrollbar-thumb {
  border-radius: 5px;
  background-color: var(--neon);
}

.right ::-webkit-scrollbar {
  display: none;
}

